# paramboost

./: .gitignore  README.md  benchmark_exp.py  benchmark_exp_ebm.py  main.py  pyproject.toml  requirements.txt  split_dataset.py
case_study/: lpmc.py  results_class_spe.csv  results_continuous.csv  results_convex.csv  results_monotonic.csv  results_normal.csv  utils.py
data/: Concrete_Data.xls  strat_group_k_fold_london.pickle
data/covertype/: covertype.py
data/uci/har/: regroup_datasets.py
experiment/models/: aplr.py  ebm.py  linear_model.py  nam.py  nbm.py  paramb.py  pymgcv.py
experiment/models/namnbm/: concept_nam.py  concept_nbm.py
experiment/results/: analyse_results.ipynb  results.tex  results_time.tex  results_train.tex  results_val.tex
experiment/results/concrete/0/aplr/: hyperparameters.json  results.csv
experiment/results/concrete/0/ebm/: hyperparameters.json  results.csv
experiment/results/concrete/0/linear_model/: hyperparameters.json  results.csv
experiment/results/concrete/0/nam/: hyperparameters.json  results.csv
experiment/results/concrete/0/nbm/: hyperparameters.json  results.csv
experiment/results/concrete/0/paramb/: hyperparameters_order3_cont1.json  results_order0_cont-1.csv  results_order1_cont-1.csv  results_order1_cont0.csv  results_order2_cont-1.csv  results_order2_cont0.csv  results_order2_cont1.csv  results_order3_cont-1.csv  results_order3_cont0.csv  results_order3_cont1.csv  (+1 more)
paramboost/: boosting.py  dataset.py  histogram_builder.py  loss.py  objective.py  paramboost.py  predictions.py  preprocessing.py  utils.py
(+977 files in other folders)
